Fix tooltip vw bug on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1653,7 +1653,7 @@ $size-header-pad: 4em;
 /* Tooltip text */
 .tooltip1 .tooltiptext1 {
   visibility: hidden;
-  width: 17vw;
+  width: 250px;
   background-color: #f7f7f7;
   color: #49bf9d; 
   text-align: center;
@@ -1684,7 +1684,7 @@ $size-header-pad: 4em;
 /* Tooltip text */
 .tooltip2 .tooltiptext2 {
   visibility: hidden;
-  width: 17vw;
+  width: 250px;
   background-color: #f7f7f7;
   color: #49bf9d; 
   text-align: center;
